// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile n huge 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #FFFFFF;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
  font-size: 22;
  line-height: 22px;
  margin-top: 5px;
}

.IS3 {
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS3"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
    >
      <ArticleLabel
        color="#CCC"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
      role="heading"
    >
      This is tile headline
    </div>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;

exports[`tile n medium 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #FFFFFF;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
  font-size: 18;
  line-height: 18px;
  margin-top: 0;
}

.IS3 {
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS3"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
    >
      <ArticleLabel
        color="#CCC"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
      role="heading"
    >
      This is tile headline
    </div>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;

exports[`tile n small 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #FFFFFF;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 11;
  font-size: 18;
  line-height: 18px;
}

.IS3 {
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginRight": "5px",
      "padding": "10px",
      "paddingHorizontal": 12,
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS3"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
    >
      <ArticleLabel
        color="#CCC"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
      role="heading"
    >
      This is tile headline
    </div>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;

exports[`tile n wide 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #FFFFFF;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
  font-size: 20;
  line-height: 20px;
  margin-top: 0;
}

.IS3 {
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS3"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
    >
      <ArticleLabel
        color="#CCC"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
      role="heading"
    >
      This is tile headline
    </div>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;

exports[`tile n with default star 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #FFFFFF;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 11;
  font-size: 18;
  line-height: 18px;
}

.IS3 {
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginRight": "5px",
      "padding": "10px",
      "paddingHorizontal": 12,
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS3"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
    >
      <ArticleLabel
        color="#CCC"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
      role="heading"
    >
      This is tile headline
    </div>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;
